Fix: Overlapping lines on election profile.

--- a/style.css
+++ b/style.css
@@ -914,3 +914,6 @@ aside.widget_rss ul li:not(:first-of-type):before
 aside.widget_rss ul li span.rss-date
 	{ display: block; color: #666666; margin-left: 15px; }
 
+/* ---------------------------- hide n show ---------------------- */
+div.gruene_hide_n_show div.gruene_hide_n_show_display a::before
+	{ content: "→ "; }
